--- a/vignettes/StarWarsStats.Rmd
+++ b/vignettes/StarWarsStats.Rmd
@@ -1,23 +1,22 @@
 ---
-output: github_document
+title: "StarWarsStats"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{StarWarsStats}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
-
-<!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+  comment = "#>"
 )
 ```
 
-# StarWarsStats
-
-<!-- badges: start -->
-
-<!-- badges: end -->
+```{r setup}
+library(StarWarsStats)
+```
 
 The goal of this R Package is to provide a set of utility functions to easily load, filter, validate, and analyze data from the 'dplyr::starwars' data set, focusing on character attributes, names, heights, genders, and associated starships. The package offers robust, well documented examples of R programming techniques, including, 'dplyr' wrangling, input validation, and error handling within a fun, accessible domain. It was created as an educational exercise to demonstrate practical R function writing and documentation standards, and is primarily intended for students learning R programming who want hands on examples of data manipulation and building reuseable functions within validation checks.
 
@@ -55,7 +54,7 @@ Once the remotes package is installed, use the install_github() function:
 After installation is complete, you can load the package and start using your functions:
 
 ```{r}
-library(StarWarsStats)
+# library(StarWarsStats)
 ```
 
 ## Data
